Fix: voicemail link on safari refactor: css and js order

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -617,7 +617,7 @@ footer,
 footer {
   /* border: 1px dotted red; */
   background-color: #1e2328;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   width: 100%;
 }
 
